# svo_edgelet

./: .gitignore  CMakeLists.txt
src/: feature_detection.cpp
test/: test_myself.cpp  test_pipel_euroc.cpp
test/ros/svo_edgelet/: CMakeLists.txt  manifest.xml  package.xml~  svo_ros_live  svo_ros_live.cpp
